--- a/Rush-2.css
+++ b/Rush-2.css
@@ -4,21 +4,19 @@
 }
 .page{
     font-family:sans-serif;
-    margin:0 auto;
     background:#000;
     color:#fff;
     line-height:1.5;
-    position:relative;
 }
 
 .header{
     padding:0 12px;
-    position:fixed;
     z-index:999;
     width:3%;
     background:#111;
     box-sizing:border-box;
     border-bottom:1px solid #fff;
+    margin-right: 10px;
 }
 .header-title{
     line-height:50px;
@@ -36,9 +34,6 @@ li{
 }
 
 #menu-button{
-    position:absolute;
-    top:0;
-    right:0;
     width:50px;
     height:50px;
     overflow:hidden;
@@ -71,31 +66,20 @@ li{
 
 }
 #menu.show-menu{
-    transform:translateY(51px);
-}
-
-.titre {
-    margin-left: 2%;
-    margin-top: 1%;
+    transform:translateY(0px);
 }
 
 .fh {
-    float: right;
+    align-items: center;
+    display: flex;
 }
 
 .pfh {
-    margin-right: 2%;
+    margin-right: 20px;
+    margin-left: 10px;
+
 }
 
-M{
-    margin-left: 2%;
-}
-I{
-    margin-left: 5%;
-}
-Y{
-    margin-left: 2%;
-}
 .gras{
     font-weight: bold;
 }
@@ -103,13 +87,59 @@ Y{
     color: grey;
     font-size: 10px;
 }
-
-.search {
-    float: left;
-    margin-top: 2%;
-    border: opacity('0');
+.hdp {
+    justify-content: space-between;
 }
 
-.searchform {
-    border-bottom: 1px solid black;
+.groupetitle {
+    margin-left: 2%;
+    display : flex;
+    font-size: 10px;
+  }
+
+.titre {
+    margin-left: 15px;
+}
+.leftnav {
+   display: flex;
+    align-items: center;
+}
+
+
+#searchbar {
+    display: grid;
+    grid-template-columns: 10% 60% 20%;
+    grid-gap: 5%;
+    border: 0;
+    width: 550px;
+}
+
+.searchy {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 30px;
+}
+.searchies {
+    display: flex;
+    align-items: center;
+}
+
+.intsearch {
+    display: flex;
+    border-bottom: 2px solid black;
+    margin-left: 10px;
+    width:100%;
+}
+
+footer {
+    font-family: sans-serif;
+}
+
+select {
+    font-size: .9rem;
+    padding: 2px 5px;
+    border:0;
+    border-bottom: 2px outset;
+    margin-right: 20px;
 }
